--- a/css/style.css
+++ b/css/style.css
@@ -275,3 +275,49 @@ a:visited,
 #search .sub li a:hover{
 	color:#fff;
 }
+
+body {
+  padding: 45px 0;
+  font: 13px 'Open Sans', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  background: #1192d3;
+}
+
+#weather {
+  width: 425px;
+  top:30;
+  left:10;
+  margin: 0px auto;
+  text-align: center;
+  text-transform: uppercase;
+  background-color:rgba(109, 109, 109, 0.6);
+  border-radius:10px;
+  height:120%;
+  font-family:sans-serif 
+}
+
+#weather h2 {
+  margin: 0 0 8px;
+  color: #fff;
+  font-size: 150px;
+  font-weight: 300;
+  text-align: center;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
+}
+
+#weather ul {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 5%;
+}
+
+#weather li {
+  background: #fff;
+  background: rgba(255,255,255,0.90);
+  padding: 20px;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+#weather .currently {
+  margin: 0 20px;
+}
