--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+.container-fluid {
+	margin: 0;
+	padding:0;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -51,10 +56,8 @@ table {
 	clear:both;
 }
 #wrapper{
-	min-width:700px;
-	max-width:1000px;
-	width:60%;
-	margin:5% auto 0 auto;
+	min-width:100%;
+	width:100%;
 }
 a:link,
 a:visited,
@@ -277,22 +280,20 @@ a:visited,
 }
 
 body {
-  padding: 45px 0;
+  padding: 0 0;
   font: 13px 'Open Sans', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   background: #1192d3;
 }
 
 #weather {
-  width: 425px;
-  top:30;
-  left:10;
-  margin: 0px auto;
-  text-align: center;
-  text-transform: uppercase;
-  background-color:rgba(109, 109, 109, 0.6);
-  border-radius:10px;
-  height:120%;
-  font-family:sans-serif 
+    margin: 20px 10px;
+    width: 70%;
+    text-align: center;
+    text-transform: uppercase;
+    background-color:rgba(109, 109, 109, 0.6);
+    border-radius:10px;
+    height:120%;
+    font-family:sans-serif
 }
 
 #weather h2 {
@@ -311,8 +312,6 @@ body {
 }
 
 #weather li {
-  background: #fff;
-  background: rgba(255,255,255,0.90);
   padding: 20px;
   display: inline-block;
   border-radius: 5px;
@@ -320,4 +319,38 @@ body {
 
 #weather .currently {
   margin: 0 20px;
+}
+
+/*changes to weather embed
+ */
+div.aw-widget-current-inner div.aw-widget-content a.aw-current-weather p span.aw-weather-description {
+	white-space: nowrap;
+}
+div.aw-widget-current-inner div.aw-widget-content a.aw-current-weather p time::content{
+	display:none;
+}
+#weather #link_get_widget {
+	display:none;
+}
+#scoreboard {
+    width:100%;
+    height:65px;
+    position: fixed;
+    bottom: 0
+}
+#footer {
+    bottom:0;
+    position: fixed;
+    width:100%;
+}
+
+#wsj-col {
+    margin-left: 15px;
+    padding-right:15px;
+}
+#wsj-div {
+    width: 85%;
+}
+div.fw-feed-item {
+    padding:5px !important;
 }
