--- a/css/style.css
+++ b/css/style.css
@@ -400,18 +400,26 @@ div.fw-feed-item {
     width: 100%;
     text-align: left;
     background-color: white;
-    opacity: .5;
+    opacity: .8;
     color: #273240 !important;
-    padding: 10px 10px;
-
+    padding: 20px;
+	font-family: 'Jura', sans-serif;
+	font-size: 22px;
+	font-weight:bold;
 }
 #quote b {
     display:none;
 }
 #quote a {
-    color: #273240 !important;
-
+    color: #7a0722 !important;
+	font-weight:normal;
+	padding-top: 10px;
+	position: fixed;
+	font-size:18px;
 }
 #quote-col {
     padding: 10px 10%;
+}
+#quote br:first-of-type {
+	display:none;
 }
