--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,7 @@ div.fw-feed-item {
     padding: 10px 15px 10px 0;
     min-height: 200px;
     height: 100%;
+	margin-left: -3px;
 }
 #philly-sports-div {
     width: 100%;
