--- a/css/style.css
+++ b/css/style.css
@@ -376,13 +376,13 @@ div.fw-feed-item {
 }
 #map-col {
     text-align: right;
+	margin-left: -3px;
 }
 #map-iframe {
     width: 100%;
     padding: 10px 15px 10px 0;
     min-height: 200px;
     height: 100%;
-	margin-left: -3px;
 }
 #philly-sports-div {
     width: 100%;
@@ -423,4 +423,7 @@ div.fw-feed-item {
 }
 #quote br:first-of-type {
 	display:none;
+}
+#quote::before {
+	content:""";
 }
