--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ div.aw-widget-current-inner div.aw-widget-content a.aw-current-weather p time::c
 }
 #scoreboard {
     width:100%;
-    height:65px;
+    height:130px;
     position: fixed;
     bottom: 0
 }
@@ -393,7 +393,7 @@ div.fw-feed-item {
     text-align: center;
 }
 .fw-iframe {
-	height: 450px !important;
+	height: 400px !important;
     opacity: .9;
 }
 
@@ -427,3 +427,7 @@ div.fw-feed-item {
 #quote::before {
 	content:""";
 }
+#global-scoreboard {
+	zoom:2;
+}
+
